k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clixx
  labels:
    app.kubernetes.io/name: clixx
    environment: base
